--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <web-app>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
